<!-- Julian Pitterson - N01680049 -->
<resources>
    <string name="app_name">JulianLab9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_full_name">Julian Pitterson</string>
    <string name="nav_email">n01680049@humber.ca</string>
    <string name="nav_header_image_desc">Profile Image</string>
    <string name="menu_jul">Julian</string>
    <string name="menu_pit" translatable="false">Pitterson</string>
    <string name="fragment_jul_title" translatable="false">Julian Fragment</string>
    <string name="fragment_pit_title" translatable="false">Pitterson Fragment</string>
    <string name="options">Options</string>
    <string name="toggle_mode">Jul</string>
    <string name="search">Pit</string>
    <string name="search_hint">Enter search phrase</string>
    <string name="search_button">Search</string>
    <string name="pref_mode_key">night_mode</string>
    <string name="hint_course_name">Enter course Name</string>
    <string name="hint_course_desc">Enter Course Description</string>
    <string name="btn_save">Save</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="toast_saved">Courses saved!</string>
    <string name="toast_no_data">No data to delete</string>
    <string name="label_file_name">File Name</string>
    <string name="label_file_contents">File Contents</string>
    <string name="btn_persistent">Persistent File</string>
    <string name="btn_create_file">Create File</string>
    <string name="btn_delete_file">Delete File</string>
    <string name="btn_write_file">Write File</string>
    <string name="btn_read_file">Read File</string>
    <string name="snack_file_name_missing">Julian Pitterson - File name missing</string>
    <string name="toast_content_missing">Julian Pitterson - Content Missing</string>
    <string name="btn_cache">Cache File</string>
    <string name="error_reading_file">Error reading file</string>
    <string name="file_written">File written</string>
    <string name="file_not_found">File not found</string>
    <string name="file_deleted">"File deleted: "</string>
    <string name="file_created">"File created: "</string>
    <string name="file_already_exists">File already exists</string>
    <string name="dismiss_snack">Dismiss</string>

</resources>