<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/purple_500"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/julNavImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/nav_header_image_desc" />

    <TextView
        android:id="@+id/julNavName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_full_name"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/julNavEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_email"
        android:textColor="@android:color/white" />

</LinearLayout>